added more robust server, with multithreading added client to be able to hand diffrent users this does mean tho for the correct outputs to be displayed its recommended to use the Client.java

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>libs/</classpathPrefix>
                             <mainClass>
-                                quiztastic.entries.ServerUI
+                                quiztastic.server.JeopardyServer
                             </mainClass>
                         </manifest>
                     </archive>
